--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,5 +1,82 @@
 @import "tailwindcss";
 
 body{
-  color: black;
+  color: white;
 }
+
+/* :root {
+  --bg-image: url('./assets/bg3.jpg'); 
+}
+
+body, #root {
+  height: 100%;
+  margin: 0;
+  font-family: sans-serif;
+}
+
+body {
+  background-image: var(--bg-image);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+} */
+
+
+.glass {
+  background: rgba(0, 0, 0, 0.58);           /* softer transparency */
+  backdrop-filter: blur(19px);                     /* smoother blur */
+  -webkit-backdrop-filter: blur(15px);             /* Safari support */
+  /* border-radius: 20px;                             slightly larger radius for modern look */
+  /* border: 1px solid rgba(255, 255, 255, 0.25);    soft subtle border */
+  /* padding: 2.5rem 3rem;                        */
+  color: #ffffffdd;                                /* slight transparency in text */
+  /* max-width:100%; */
+  /* max-height: 100%; */
+  text-align: center;
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2),      /* smooth shadow for depth */
+              0 4px 16px rgba(255, 255, 255, 0.1);
+  transition: all 0.3s ease-in-out;                /* smooth hover transition */
+}
+
+/* Optional hover effect for interactive feel */
+/*  */
+
+/* Headings & text inside glass */
+.glass h1,
+.glass p,
+.glass div {
+  /* font-size: 2rem; */
+  /* font-weight: 600; */
+  /* margin-bottom: 1rem; */
+  text-shadow: 0 0 2px #c6c6c688, 0 0 8px #bdbbbb55; 
+}
+
+.ant-input-password-icon {
+  color: white !important;
+}
+
+/* Upload Dragger container */
+.ant-upload-drag {
+  background: transparent !important;
+  border: 1px dashed rgba(255, 255, 255, 0.5) !important;
+  width: 26vw !important;
+}
+
+/* Text inside dragger */
+.ant-upload-text,
+.ant-upload-hint {
+  color: white !important;
+  font-size: small !important;
+}
+
+/* Upload icon */
+.ant-upload-drag-icon {
+  color: white !important;
+}
+
+/* Hover state */
+.ant-upload-drag:hover {
+  border-color: white !important;
+}
+
+
